--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "angular-xeditable",
   "description": "Edit-in-place for angular.js",
-  "version": "0.1.8",
-  "homepage": "https://vitalets.github.io/angular-xeditable",
+  "version": "0.1.9",
+  "homepage": "https://tanhung94.github.io/angular-xeditable",
   "author": {
     "name": "Vitaliy Potapov",
     "email": "noginsk@rambler.ru"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/vitalets/angular-xeditable.git"
+    "url": "git://github.com/tanhung94/angular-xeditable.git"
   },
   "engines": {
     "node": ">= 0.8.0"
